运营商后台0421
运营商后台0421全套HTML

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div id="top">
-            <p>欢迎！<span>某某公司名称</span><a href="#">退出</a></p>
+            <p>欢迎！<span>某某公司名称</span><a href="login.html">退出</a></p>
         </div>
     </header>
     <nav>
