--- a/order.html
+++ b/order.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./css/pagination.css" media="screen">
     <link href="css/two.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/calendar.css">
-    <script src="js/jquery.js"></script>
+    <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/calendar.js"></script> 
     <script src="js/jquery.pagination.min.js"></script>
     <script src="js/main.js"></script>
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div id="top">
-            <p>欢迎！<span>某某公司名称</span><a href="#">退出</a></p>
+            <p>欢迎！<span>某某公司名称</span><a href="login.html">退出</a></p>
         </div>
     </header>
     <nav>
