--- a/personal-2.html
+++ b/personal-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="Design by Bai" />
     <title>加加流量平台-业务统计</title>
-    <script src="js/jquery.js"></script>
+    <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/calendar.js"></script>
     <script src="js/main.js"></script>
     <script src="js/jquery.pagination.min.js"></script>
@@ -16,7 +16,7 @@
 <body>
  <header>
      <div id="top">
-         <p>欢迎！<span>某某公司名称</span><a href="#">退出</a></p>
+         <p>欢迎！<span>某某公司名称</span><a href="login.html">退出</a></p>
      </div>
  </header>
  <nav>
@@ -50,5 +50,11 @@
              </div>
      </section>
  </div>   
+ <footer>
+     <div id="footer_inner">
+         <p><a href="#">合作伙伴</a></p>丨<p><a href="#">联系我们</a></p>
+         <p>京ICP备13051795号-2加加流量  版权所有</p>
+     </div>
+ </footer>
 </body>
 </html>
