--- a/service1.html
+++ b/service1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="Design by Bai" />
     <title>加加流量平台-业务统计</title>
-    <script src="js/jquery.js"></script>
+    <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/calendar.js"></script>
     <script src="js/main.js"></script>
     <script src="js/jquery.pagination.min.js"></script>
@@ -16,7 +16,7 @@
 <body>
 <header>
     <div id="top">
-        <p>欢迎！<span>某某公司名称</span><a href="#">退出</a></p>
+        <p>欢迎！<span>某某公司名称</span><a href="login.html">退出</a></p>
     </div>
 </header>
 <nav>
